tests/Rules/Structure/Fixtures/valid/table_with_caption.html.twig
<table>
  <caption>Monthly Sales</caption>
  <tr><th scope="col">Month</th><th scope="col">Revenue</th></tr>
  <tr><td>January</td><td>1000</td></tr>
</table>
