tests/Rules/Structure/Fixtures/invalid/table_th_scope_invalid_value.html.twig
{# 1 error #}
<table>
  <thead>
    <tr>
      <th scope="invalid">Name</th>
      <th scope="col">Age</th>
    </tr>
  </thead>
</table>
